--- a/package.json
+++ b/package.json
@@ -3,12 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "devDependencies": {
-    "jest": "^25.1.0",
-    "mini-css-extract-plugin": "^0.9.0"
-  },
   "scripts": {
-    "server": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -26,29 +21,31 @@
     "@babel/runtime": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.3",
     "express": "^4.17.1",
-    "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
-    "raf": "^3.4.1",
     "react": "^16.12.0",
     "react-dates": "^21.7.2",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-test-renderer": "^16.12.0",
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "uuid": "^3.4.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
+    "webpack-cli": "^3.3.10"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.3",
+    "react-test-renderer": "^16.12.0",
     "webpack-dev-server": "^3.10.1"
   }
 }
