--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -21,6 +21,7 @@
     "@babel/runtime": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.8.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -36,6 +37,7 @@
     "react-router-dom": "^5.1.2",
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "uuid": "^3.4.0",
@@ -43,11 +45,13 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
+    "cross-env": "^7.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.3",
     "jest": "^25.1.0",
     "react-test-renderer": "^16.12.0",
+    "redux-mock-store": "^1.5.4",
     "webpack-dev-server": "^3.10.1"
   }
 }
